syntax = "proto3";

option csharp_namespace = "FitnessApp.Grpc";

package user;

service UserService {
  rpc GetUserById (UserRequest) returns (UserResponse);
}

message UserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string username = 3;
}
